--- a/src/DevBlog/project.json
+++ b/src/DevBlog/project.json
@@ -23,7 +23,8 @@
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview3-final",
-    "Microsoft.EntityFrameworkCore.Design": "1.0.1"
+    "Microsoft.EntityFrameworkCore.Design": "1.0.1",
+    "NEST": "2.4.1"
   },
 
     "tools": {
