Project migrated from .NET Core 1 to Core 2

--- a/src/DevBlog/appsettings.json
+++ b/src/DevBlog/appsettings.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "BlogContext": "Server=.\\SQLEXPRESS;Database=DevBlog;Trusted_Connection=True;"
   }
 }
